# aoc

./: build.bat
arch/day1/: CMakeLists.txt  main.cpp  run.bat
arch/day2/: CMakeLists.txt  README.md  build.bat  main.cpp
arch/day2/old/: old.cpp
